что-то было добвалено

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 Осталось сделать:
-- система меню игры:
++ система меню игры:
   - главное меню
-  - переходы между меню
+  + переходы между меню
   - меню настроек
   
-- отображение текстур
++ отображение текстур
 - запуск звуков
 - кнопки для строительства башен
 - отрисовка фона уровня
